--- a/poem.rmd
+++ b/poem.rmd
@@ -29,6 +29,16 @@ The frumious Bandersnatch!"
 ## Second Verse
 <!--Put the first five lines of a poem by Robert Frost here!-->
 
+He took his vorpal sword in hand:  
+Long time the manxome foe he sought --  
+So rested he by the Tumtum tree,  
+And stood a while in thought.  
+
+And, as in uffish thought he stood,  
+The Jabberwock, with eyes of flame,  
+Came whiffling through the tulgey wood,  
+And burbled as it came!  
+
 ## Third Verse
 <!--Put the first two verses of The Walrus and the Carpenter here!-->
 
