--- a/poem.rmd
+++ b/poem.rmd
@@ -42,5 +42,15 @@ And burbled as it came!
 ## Third Verse
 <!--Put the first two verses of The Walrus and the Carpenter here!-->
 
+One two! One two! And through and through.   
+The vorpal blade went snicker-snack!    
+He left it dead, and with its head.   
+He went galumphing back.    
+
+"And hast thou slain the Jabberwock?    
+Come to my arms, my beamish boy!    
+Oh frabjous day! Callooh! Callay!"    
+He chortled in his joy.    
+
 ## Last Verse
 <!--Put a short poem of your choice 8-20 lines,here!-->
