--- a/poem.rmd
+++ b/poem.rmd
@@ -29,28 +29,44 @@ The frumious Bandersnatch!"
 ## Second Verse
 <!--Put the first five lines of a poem by Robert Frost here!-->
 
-He took his vorpal sword in hand:  
-Long time the manxome foe he sought --  
-So rested he by the Tumtum tree,  
-And stood a while in thought.  
-
-And, as in uffish thought he stood,  
-The Jabberwock, with eyes of flame,  
-Came whiffling through the tulgey wood,  
-And burbled as it came!  
+Two roads diverged in a yellow wood,    
+And sorry I could not travel both.   
+And be one traveler, long I stood.   
+And looked down one as far as I could.   
+To where it bent in the undergrowth;    
 
 ## Third Verse
 <!--Put the first two verses of The Walrus and the Carpenter here!-->
 
-One two! One two! And through and through.   
-The vorpal blade went snicker-snack!    
-He left it dead, and with its head.   
-He went galumphing back.    
-
-"And hast thou slain the Jabberwock?    
-Come to my arms, my beamish boy!    
-Oh frabjous day! Callooh! Callay!"    
-He chortled in his joy.    
+    
 
 ## Last Verse
 <!--Put a short poem of your choice 8-20 lines,here!-->
+
+No man is an island,  
+
+Entire of itself,  
+
+Every man is a piece of the continent,  
+
+A part of the main.  
+
+If a clod be washed away by the sea,  
+
+Europe is the less.  
+
+As well as if a promontory were.  
+
+As well as if a manor of thy friend’s. 
+
+Or of thine own were:  
+
+Any man’s death diminishes me,  
+
+Because I am involved in mankind,  
+
+And therefore never send to know for whom the bell tolls;  
+
+It tolls for thee.  
+
+
